Buttons for gameover menu without functionality, and frame

--- a/NHF_muhold.cbp
+++ b/NHF_muhold.cbp
@@ -44,6 +44,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="GameStatusSpecific/Button.h" />
+		<Unit filename="GameStatusSpecific/GAMEOVER/gameover.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="GameStatusSpecific/GAMEOVER/gameover.h" />
 		<Unit filename="GameStatusSpecific/GameStatus.h" />
 		<Unit filename="GameStatusSpecific/GameStatusChangingFunctions.c">
 			<Option compilerVar="CC" />
